src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__assigning_empty_string_literal_to_char_results_in_error.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: msg
---
error[E071]: Cannot generate CHAR from empty literal
  ┌─ <internal>:6:14
  │
6 │         x := '';
  │              ^^ Cannot generate CHAR from empty literal
